--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 .container-fluid {
 	/*background-color: #fff;*/
 	background-image: url('../../assets/images/small_steps.png');
-	height: 100%;
+	height: auto;
 	-webkit-transition: height ease 0.8s;
 	-moz-transition: height ease 0.8s;
 	transition: height ease 0.8s;	
