--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,39 @@ button#submit-btn:focus {
 	width: 500px;
 }
 
+#signup {
+	width: 85%;
+	color: #fff;
+	opacity: 0.8;
+	background-color: #333;
+	text-align: center;
+	margin: 0 auto 40px;
+	padding: 50px;
+	border-radius: 5px;
+}
+
+input#user-email {
+	width: 50%;
+	padding: 10px;
+	color: #333;
+	border-radius: 5px;
+	margin: 15px;
+}
+
+button#newsletter-signup {
+	margin: 10px;
+	color: ;
+	border: 1px solid grey;
+	background-color: transparent;
+	padding: 15px;
+	border-radius: 5px;
+	transition: background-color ease 0.3s;
+}
+
+#newsletter-signup:hover {
+	background-color: #111;
+}
+
 #results {
 	margin: 0 0 100px 0;
 }
