--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,7 @@ button#submit-btn:focus {
 
 #newsletter {
 	background-color: #333;
+	margin-top: 50px;
 }
 #signup {
 	width: 60%;
@@ -111,6 +112,12 @@ button#newsletter-signup {
 	margin: 0 0 100px 0;
 }
 
+.streaming-check {
+	font-size: 36px;
+	color: #27ae60;
+	float: right;
+}
+
 .movie-poster > img {
 	width: 100%;
 }
@@ -134,6 +141,20 @@ button#newsletter-signup {
 .result:hover {
 	background-color: #333;
 }
+
+button#results-filter {
+	border-radius: 5px;
+	background-color: transparent;
+	border: 1px solid #333;
+	padding: 15px;
+	margin: 0 auto 45px;
+	display: block;
+}
+
+button#results-filter:focus {
+	outline: none;
+}
+
 
 #results > div > div.col-lg-3.movie-poster > img {
 	/*padding: 20px;*/
