--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,9 @@ button#newsletter-signup {
 }
 
 #results {
-	margin: 0 0 100px 0;
+	margin: 0 0 20px 0;
+	padding-bottom: 20px;
+	border-bottom: 2px solid lightgrey;
 }
 
 .streaming-check {
@@ -211,4 +213,5 @@ button#results-filter:focus {
 #flickity-carousel > h2 {
 	text-align: center;
 	margin: 40px;
+    /*padding-top: 50px;*/
 }
