--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ button#newsletter-signup {
 
 #results {
 	margin: 0 0 20px 0;
-	padding-bottom: 20px;
+	padding-bottom: 40px;
 	border-bottom: 2px solid lightgrey;
 }
 
@@ -213,5 +213,6 @@ button#results-filter:focus {
 #flickity-carousel > h2 {
 	text-align: center;
 	margin: 40px;
+	font-size: 42px;
     /*padding-top: 50px;*/
 }
